{{$NEXT}}
          [Enchantments]
          - Toggle view during edit

0.17      2011-12-06 07:23:54 America/Denver
          [Remedies]
          - Mark data_schema.t as an author test
           
          [Refinements]
          - Improve docs
          

0.16      2011-12-04 20:58:30 America/Denver
          [Enchantments]
          - monthly calendar view of notes.  For example,
              /calendar/year/2011/month/12
          - Enable internal links of the [[URI|title]] format
          - cpan.synopsis $Module shortcut to show a $Module's synopsis
          - cpan.synopses.recent 10 shortcut to show the 10 most
            recently released module synopses

0.15      2011-11-20 11:51:53 America/Denver
          [Enchantments]
          - New document storage option of DBM::Deep
            To enable it, add the following to your configuration:
              document_storage  => 'Deep',
              dbm_deep_filepath => '/path/to/your/mojito-deep.db',

          [Refinements]
          - Make default wiki language configurable with 
            default_wiki_language => $my_choice. 
            Choices are: textile, markdown, creole and html
          - Added POD page format option
          - Add metacpan module and author URL shortcuts

          [Remedies]
          - Ensure username is unique when add_user() is called

0.14      2011-10-29 16:19:49 America/Denver
          [Refinements]
          - Config read only once on app startup now
          - Configs merged with a precedence

          [Remedies]
          - require verison 0.02 of MooX::Types::MooseLike

0.13      2011-10-24 08:31:15 America/Denver
          [Remedies]
          - publish.t was running on smokers when it should not
          
          [Refinements]
          - Limit number of recent articles displayed via 
            'last_link_number' config option

0.12      2011-09-26 16:48:22 America/Denver
          [Refinements]