@@ -1,6 +1,10 @@
 {{$NEXT}}
           [Enchantments]
           - Toggle view during edit
+          
+          [Remedies]
+          - Use MooX::Types::MooseLike::Base
+            (keeps tests happy w/ MooX::Types::MooseLike 0.03+)
 
 0.17      2011-12-06 07:23:54 America/Denver
           [Remedies]
@@ -8,7 +12,6 @@
            
           [Refinements]
           - Improve docs
-          
 
 0.16      2011-12-04 20:58:30 America/Denver
           [Enchantments]
